--- a/readme.org
+++ b/readme.org
@@ -6,13 +6,23 @@ Hotkey Helper -- Easily document keybindings
 Hotkey Helper is a little scheme program that parses =.sxhkdrc= files,
 taking the hotkeys and some specially formatting comments to create a
 documented list associating keybindings with their actions.
+
+With the latest updates intelligent parsing is added, allowing
+hotkeys to be executed by string (this results in some neat
+applications, which you can see in the usage section).
 * Installation
-This program requires chicken scheme, and a library called fmt.
+This program requires chicken scheme, a couple of libraries, and ninja
+as the build system.
 
 Installing chicken scheme should be relatively easily, and likely
 available in the repos of =insert distribution here=.
 
-To install fmt, run =chicken-install -s fmt=.
+To install the required libraries, run =chicken-install -s fmt shell
+args=.
+
+After cloning this repo, run ninja in the top level directory, it
+should produce an executable named =hotkeys=. Simply move =hotkeys= to
+somewhere in =PATH=, and you are done.
 * .sxhkdrc Setup
 In order to use the program's functionality, you need to tweak your
 =.sxhkdrc= to include special comments designed as documentation for
@@ -28,55 +38,102 @@ you wish to document.
 super + alt + Escape
     bspc quit
 # This would show up in the formatted output as:
-# su-alt-Escape                 - Quit bspwm
+# super alt Escape - Quit bspwm
 #+END_EXAMPLE
 
+Additionally, ={}= can be used to denote lists mapping multiple segments
+of documentation to multiple hotkey segments at once
+
+#+BEGIN_EXAMPLE
+# Example of segmented documentation
+# ;; Move the current window {left,down,up,right}
+super + {h,j,k,l}
+  bspc node -s {west,south,north,east}
+# This would expand in output as:
+# super h                  - Move the current window left
+# super j                  - Move the current window down
+# super k                  - Move the current window up
+# super l                  - Move the current window right
+#+END_EXAMPLE
+
+This allows for fast, compact documentation for keybindings of
+arbitrary complexity.
 * Usage
-To use the program, use =csi= to run the =main.scm= file, like so
+To use the program, run =hotkeys=.
 
 #+BEGIN_SRC shell
-csi -ss main.scm
+hotkeys
 #+END_SRC
 
-You can also pass a path argument, for the location of your =.sxhkdrc=
-file
+This will print the usage for the program
+
+#+BEGIN_EXAMPLE
+Usage: hotkeys [options...]
+
+ -e, --execute=HOTKEY     Execute command for HOTKEY
+ -p, --print              Print hotkeys
+ -f, --file=NAME          Parse file NAME
+ -h, --help               Display this text
+
+#+END_EXAMPLE
+
+By default, =hotkeys= looks in the default sxhkd config folder
+(~/.config/sxhkd/sxhkdrc) for the sxhkdrc file. You can also pass a path argument, for the location of your =.sxhkdrc=
+file.
 
 #+BEGIN_SRC shell
-csi -ss main.scm /path/to/.sxhkdrc
+hotkeys -f /path/to/.sxhkdrc
 #+END_SRC
 
-Upon running this command, you should get a formatted list of hotkeys
+However this will do nothing either, you need to pass an action
+argument to the program, currently -p or -e to tell hotkeys what to do
+with the file.
+
+- -p :: Print a formatted list of hotkeys.
+- -e :: Execute a hotkey string (e.g "super w").
+
+Upon running =hotkeys -p=, you should get a formatted list of hotkeys
 printed to the terminal, something like
 
 #+BEGIN_EXAMPLE
-[~/repos/scm/hotkey-helper] ->>  csi -ss main.scm
-su-Escape                     - Restart sxhkd
-su-alt-Escape                 - Quit bspwm
-su-Delete                     - Suspend
-su-sh-w                       - Show window list
-su-w                          - Close window
-su-b                          - Balance windows
-su-(s|f|t)                    - Make window (float,fullscreen,tiled)
-su-(grave|Tab)                - Goto last (window,desktop)
-su-apostrophe                 - Swap last two window
-Print                         - Take a screenshot
-su-p                          - Open password manager
-su-m                          - Make window biggest
-su-(_|sh-)(h|j|k|l)           - Move window (left,down,up,right)
-su-(_|sh-)bracket(left|right) - Go (forward,backward) a desktop
-su-ct-(h|l)                   - Move window between monitors
-button1                       - Focus window
-su-button(1-3)                - Focus Window
-XF86AudioLowerVolume          - Lower Volume
-XF86AudioRaiseVolume          - Raise Volume
-XF86AudioPlay                 - Play mpd
-XF86AudioNext                 - Next song
-XF86AudioPrev                 - Previous song
-XF86AudioStop                 - Open ncmpcpp
-su-Return                     - Spawn terminal
-su-space                      - Run a command
-su-i                          - Capture notes using org-mode
-su-question                   - Show keybindings
+[~/repos/scm/hotkey-helper] ->>  hotkeys -p
+super question           - Show keybindings
+super i                  - Capture notes using org-mode
+super space              - Run a command
+super Return             - Spawn terminal
+XF86AudioStop            - Open ncmpcpp
+XF86AudioPrev            - Previous song
+XF86AudioNext            - Next song
+XF86AudioPlay            - Play mpd
+XF86AudioRaiseVolume     - Raise Volume
+XF86AudioLowerVolume     - Lower Volume
+super button1-3          - Focus window
+button1                  - Focus window
+super ctrl h             - Move window to the left monitor
+super ctrl l             - Move window to the right monitor
+super bracketleft        - Go backward a desktop
+super bracketright       - Go forward a desktop
+super shift bracketleft  - Move window back a desktop
+super shift bracketright - Move window forward a desktop
+super h                  - Move the current window left
+super j                  - Move the current window down
+super k                  - Move the current window up
+super l                  - Move the current window right
+super m                  - Make window biggest
+super p                  - Open password manager
+Print                    - Take a screenshot
+super apostrophe         - Swap last two window
+super grave              - Goto last window
+super Tab                - Goto last desktop
+super s                  - Make window float
+super f                  - Make window fullscreen
+super t                  - Make window tiled
+super b                  - Balance windows
+super w                  - Close window
+super shift w            - Show window list
+super Delete             - Suspend
+super alt Escape         - Quit bspwm
+super Escape             - Restart sxhkd
 #+END_EXAMPLE
 
 The output is tabulated (thanks to the fmt library), so all the
@@ -86,12 +143,34 @@ This output can be piped to the likes of dmenu, or rofi.
 
 #+BEGIN_SRC shell
 # An example from my own config.
-# The file has been renamed and moved, but otherwise not changed.
-csi -ss ~/bin/hotkeys.scm | rofi -i -p "Hotkeys: "
+hotkeys -p | rofi -i -p "Hotkeys: "
 #+END_SRC
 
 Doing this with a program like rofi allows for powerful searching of
 hotkeys on the system.
+
+By running =hotkeys -e=, you can execute a command associated with a
+keybinding. For instance, from the above configuration =super w= is
+bound to closing a window. 
+Thus calling:
+
+#+BEGIN_SRC shell
+hotkeys -e "super w"
+#+END_SRC
+
+Will close a window, as expected.
+
+By combining the -p flag, and the -e flag, you can create a relatively
+powerful system for discovery and remembering your keybindings by
+having =hotkeys -e= run the output of the hotkeys searching script from
+earlier.
+
+#+BEGIN_SRC shell
+# Adapted from the last shell script.
+hotkeys -e "$(hotkeys -p | rofi -p Hotkeys: -i -dmenu | awk -F- '{print $1}')"
+#+END_SRC
+
+You can see an example of this in the Screenshots section.
 * Screenshots
 
 A couple of examples of the program's output being piped to rofi
@@ -103,3 +182,5 @@ Basic example:
 Example demonstrating filtering:
 
 [[file:screenshots/filtered.png]]
+
+Example demonstrating execution of a searched command
